[package]
name          = "ink-governance"
version       = "0.1.0"
authors       = ["Alessandro Baldassarre <alessandro.baldassarre.dev@gmail.com>"]
edition       = "2021"
license       = "UNLICENSED"
repository    = "https://github.com/alessandro-baldassarre/ink-governance/crate"
documentation = "https://github.com/alessandro-baldassarre/ink-governance/crate#readme"
keywords      = ["blockchain", "polkadot", "ink"]

[lib]
name = "ink_governance"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
ink        = { version = "4.0.0", default-features = false }
openbrush  = { git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false }
scale      = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
thiserror-no-std = { version = "2.0.2"}

[features]
default = ["std"]
std = [
    "ink/std",
    "openbrush/std",
    "scale/std",
    "scale-info/std",
]

governor = []

test-all = ["governor"]
