[package]
name          = "openbrush-governance"
version       = "0.1.0"
authors       = ["Alessandro Baldassarre <alessandro.baldassarre.dev@gmail.com>"]
edition       = "2021"
license       = "UNLICENSED"
repository    = "https://github.com/alessandro-baldassarre/ink-governance/crate"
documentation = "https://github.com/alessandro-baldassarre/ink-governance/crate#readme"
keywords      = ["blockchain", "polkadot", "ink"]

[lib]
name = "openbrush_governance"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
ink        = { version = "4.0.0", default-features = false }
openbrush  = { git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["access_control"] }
scale      = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std"]
std = [
    "ink/std",
    "openbrush/std",
    "scale/std",
    "scale-info/std",
]

governor = []
governor_settings = []
governor_counting_simple = []
governor_voting_group = []

governor_v1 = ["governor","governor_counting_simple","governor_voting_group"]


