[package]
name = "governance"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]

ink        = { version = "4.0.0", default-features = false }
openbrush  = { git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["access_control"] }
scale      = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"], optional = true }

ink-governance = { path = "../../crate/", default-features = false, features = ["governor"] }


[lib]
name = "my_access_control_enumerable"
path = "lib.rs"
crate-type = [
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "openbrush/std",
    "ink-governance/std"
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16
