[package]
name          = "governance-v1"
version       = "0.1.0"
authors       = ["Alessandro Baldassarre <alessandro.baldassarre.dev@gmail.com>"]
edition       = "2021"
license       = "UNLICENSED"
repository    = "https://github.com/alessandro-baldassarre/ink-governance/crate"
documentation = "https://github.com/alessandro-baldassarre/ink-governance/crate#readme"
keywords      = ["blockchain", "polkadot", "ink"]

[lib]
name = "governance_v1"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]

ink        = { version = "4.0.0", default-features = false }
openbrush  = { git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["access_control"] }
scale      = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"], optional = true }

ink-governance = { path = "../../crate/", default-features = false, features = ["governor_v1"] }

[dev-dependencies]
ink_e2e = { version = "4.0.0" } 

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "openbrush/std",
    "ink-governance/std"
]

ink-as-dependency = []
e2e-tests = []

